main.tf
provider "aws"{
    region = "us-east-1"
}


# 1. Create VPC

resource "aws_vpc" "prod_vpc" {
  cidr_block = "10.0.0.0/16"
    tags = {
    Name = "production"
  }
}

# 2. Create Internet Gateway

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod_vpc.id

  tags = {
    Name = "production"
  }
}

# 3. Create Custome Route table

resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.prod_vpc.id

  route {
    cidr_block = "10.0.1.0/24"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "production"
  }
}

# 4. Create a subnet with route table

resource "aws_subnet" "my_subnet" {
  vpc_id     = aws_vpc.prod_vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1"

  tags = {
    Name = "Main"
  }
}


# 5. Associate a subnet with route table

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.my_subnet.id
  route_table_id = aws_route_table.rt.id
}


# 6. Create Security group to allow with port 22,80,443

resource "aws_security_group" "allow_web" {
  name        = "allow_WebServer"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.prod_vpc.id

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = [116.75.111.16/32]
    ipv6_cidr_blocks = [aws_vpc.prod_vpc.ipv6_cidr_block]
  }

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = [116.75.111.16/32]
    ipv6_cidr_blocks = [aws_vpc.prod_vpc.ipv6_cidr_block]
  }

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = [116.75.111.16/32]
    ipv6_cidr_blocks = [aws_vpc.prod_vpc.ipv6_cidr_block]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_webserver"
  }
}

# 7. Create a network interface with an ip in the subnet that was created in step4

resource "aws_network_interface" "prodNI" {
  subnet_id       = aws_subnet.my_subnet.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]

}

# 8. Assign an elastic IP to the network interface created in step7

resource "aws_eip" "EIP" {
  vpc                       = true
  network_interface         = aws_network_interface.prodNI.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.gw]
}
# 9. Create Ubuntu server and install/enable apache2 

resource "aws_instance" "web-server-instance" {
    ami = "ami-0c1a7f89451184c8b"
    instance_type = "t2.micro"
    availability_zone = "us-east-1"
    key_name = "main_key"

    network_interface {
    network_interface_id = aws_network_interface.prodNI.id
    device_index         = 0
    }

    user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo bash -c 'echo your very first web server > /var/lib/www/html/index.html'
                EOF

}
